Assignment part 6: single user card change ui fixed; scrollbar of projects page and users page fixed.

--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ button div{
     background-color: var(--background);
     border-radius: 10px;
     margin: 10px;
+    height: calc(100vh - 40px);
 }
 
 /*Header styles*/
@@ -436,6 +437,7 @@ fieldset input:focus, form #color:focus {
     margin: 10px;
     display: flex;
     flex-direction: column;
+    height: calc(100vh - 40px)
 }
 header{
     padding: 20px;
